# mscgen

./: ChangeLog  README.md  TODO  configure.ac
examples/: Makefile.am
examples/.svn/: all-wcprops  dir-prop-base  entries
examples/.svn/text-base/: Makefile.am.svn-base
gdwin32/.svn/: all-wcprops  entries
gdwin32/include/.svn/: all-wcprops  entries
gdwin32/lib/.svn/: all-wcprops  entries
man/.svn/: all-wcprops  dir-prop-base  entries
man/.svn/text-base/: Makefile.am.svn-base
packaging/.svn/: all-wcprops  entries
packaging/cygport/: mscgen-0.20-1.cygport
packaging/cygport/.svn/: all-wcprops  entries
packaging/manual/: linux.sh
packaging/manual/.svn/: all-wcprops  dir-prop-base  entries
packaging/rpm/: mscgen.spec
packaging/rpm/.svn/: all-wcprops  entries
packaging/win32/: installer.nsi  setenv.sh
src/: Makefile.am  adraw.c  adraw.h  adraw_int.h  cmdparse.c  cmdparse.h  gd_out.c  language.y  lexer.h  lexer.l  main.c  msc.c  msc.h  null_out.c  ps_out.c  svg_out.c  usage.c  utf8.c  utf8.h
src/.svn/: all-wcprops  dir-prop-base  entries
src/.svn/text-base/: Makefile.am.svn-base  adraw.c.svn-base  adraw.h.svn-base  adraw_int.h.svn-base  cmdparse.c.svn-base  cmdparse.h.svn-base  gd_out.c.svn-base  language.y.svn-base  lexer.h.svn-base  lexer.l.svn-base  main.c.svn-base  msc.c.svn-base  msc.h.svn-base  null_out.c.svn-base  ps_out.c.svn-base  safe.c.svn-base  safe.h.svn-base  svg_out.c.svn-base  utf8.c.svn-base  utf8.h.svn-base
test/: Makefile.am  testinput12.msc  testinput21.msc  testinput22.msc
test/.svn/: all-wcprops  dir-prop-base  entries
(+13 files in other folders)
